--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,4 @@ sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/ut_report.xml
+sonar.test.inclusions=**/*.test.js
