--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.tests=src
 sonar.test.inclusions=**/*.test.js
+sonar.test.inclusions=ut_report.xml
 sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
