Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
           organization: 'rwplyler'
           scannerMode: 'CLI'
           projectKey: 'rwplyler_cine'
-          extraProperties: 'sonar.test.inclusions=**/*.test.js'
+          extraProperties: 'sonar.testExecutionReportPaths=reports/ut_report.xml'
 
       - script: |
           npm install -g @angular/cli
