--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,13 @@
 sonar.projectKey=rwplyler_cine
 sonar.organization=rwplyler
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=cine
-#sonar.projectVersion=1.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.projectKey=my-angular-app
+sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.tests=src
+sonar.test.inclusions=**/*.test.js
+sonar.test.inclusions=ut_report.xml
+sonar.exclusions=**/node_modules/**
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=reports/ut_report.xml 
