--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,4 @@ sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/ut_report.xml 
+sonar.testExecutionReportPaths=reports/test-report.xml
