--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,12 @@ sonar.organization=rwplyler
 sonar.projectKey=my-angular-app
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
+
+
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.tests=src
-sonar.test.inclusions=**/*.test.js
-sonar.test.inclusions=ut_report.xml
-sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=**/*.spec.ts
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=reports/ut_report.xml 
+sonar.typescript.lcov.reportPaths=/coverage/lcov.info
