--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,10 +6,10 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=src
 
 
-sonar.projectVersion=1.0
+sonar.projectVersion=2.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.test.js
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=/coverage/lcov.info
