--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,9 @@ sonar.sources=src
 sonar.projectVersion=2.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.test.js
+sonar.exclusions=**/node_modules/**,**/*.test.js
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=/coverage/lcov.info
+
+# **/*.spec.ts
