--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,16 +2,24 @@ sonar.projectKey=rwplyler_cine
 sonar.organization=rwplyler
 
 sonar.projectKey=my-angular-app
-sonar.sourceEncoding=UTF-8
-sonar.sources=src
-
-
-sonar.projectVersion=2.0
+sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.exclusions=**/node_modules/**
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
-sonar.typescript.lcov.reportPaths=/coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-# **/*.spec.ts,**/*.test.js
+# sonar.sourceEncoding=UTF-8
+# sonar.sources=src
+
+
+# sonar.projectVersion=2.0
+# sonar.sourceEncoding=UTF-8
+# sonar.sources=src
+# sonar.exclusions=**/node_modules/**
+# sonar.tests=src
+# sonar.test.inclusions=**/*.spec.ts
+# sonar.typescript.lcov.reportPaths=/coverage/lcov.info
+
+# # **/*.spec.ts,**/*.test.js
