--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "test-headless": "ng test --watch=false --code-coverage --browsers=ChromeHeadless",
     "e2e": "ng e2e",
     "sonar": "sonar-scanner"
   },
